test/integration/bad/function-signatures/overloading/stanc.expected
  $ ../../../../../../install/default/bin/stanc no_minimum_promotion.stan
Semantic error in 'no_minimum_promotion.stan', line 12, column 9 to column 17:
   -------------------------------------------------
    10:  
    11:  model {
    12:     print(foo(1,2));
                  ^
    13:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'foo':
(int, int)
Available signatures:
(real, int) => real
  No unique minimum promotion found. Overloaded functions must not have
  multiple equally valid promotion paths this function call has at least two:
  [int_to_real, None]
  and
  [None, int_to_real]
  Consider defining a new signature for the exact types needed or re-thinking
  existing definitions.
(Additional signatures omitted)
  $ ../../../../../../install/default/bin/stanc no_minimum_promotion2.stan
Semantic error in 'no_minimum_promotion2.stan', line 12, column 9 to column 17:
   -------------------------------------------------
    10:  
    11:  model {
    12:     print(foo(1,2));
                  ^
    13:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'foo':
(int, int)
Available signatures:
(int, complex) => real
  No unique minimum promotion found. Overloaded functions must not have
  multiple equally valid promotion paths this function call has at least two:
  [None, int_to_complex]
  and
  [int_to_real, int_to_real]
  Consider defining a new signature for the exact types needed or re-thinking
  existing definitions.
(Additional signatures omitted)
  $ ../../../../../../install/default/bin/stanc overload_reduce_sum.stan
Semantic error in 'overload_reduce_sum.stan', line 2, column 7 to column 17:
   -------------------------------------------------
     1:  functions {
     2:    real reduce_sum(real x){
                ^
     3:      return x;
     4:    }
   -------------------------------------------------

Identifier 'reduce_sum' clashes with Stan Math library function.
  $ ../../../../../../install/default/bin/stanc redefine-ccdf-same.stan
Semantic error in 'redefine-ccdf-same.stan', line 2, column 2 to line 4, column 3:
   -------------------------------------------------
     1:  functions {
     2:    real poisson_lccdf(int n, real x) {
           ^
     3:      return -x^2;
     4:    }
   -------------------------------------------------

Function 'poisson_lccdf' has already been declared to for signature (int, real) => real
  $ ../../../../../../install/default/bin/stanc redefine-ccdf-same2.stan
Semantic error in 'redefine-ccdf-same2.stan', line 2, column 2 to line 4, column 3:
   -------------------------------------------------
     1:  functions {
     2:    real poisson_lccdf(int n, real x) {
           ^
     3:      return -x^2;
     4:    }
   -------------------------------------------------

Function 'poisson_lccdf' has already been declared to for signature (int, real) => real
  $ ../../../../../../install/default/bin/stanc redefine-cdf-same.stan
Semantic error in 'redefine-cdf-same.stan', line 2, column 2 to line 4, column 3:
   -------------------------------------------------
     1:  functions {
     2:    real poisson_lcdf(int n, real x) {
           ^
     3:      return -x^2;
     4:    }
   -------------------------------------------------

Function 'poisson_lcdf' has already been declared to for signature (int, real) => real
  $ ../../../../../../install/default/bin/stanc redefine-cdf-same2.stan
Semantic error in 'redefine-cdf-same2.stan', line 2, column 2 to line 4, column 3:
   -------------------------------------------------
     1:  functions {
     2:    real poisson_lcdf(int n, real x) {
           ^
     3:      return -x^2;
     4:    }
   -------------------------------------------------

Function 'poisson_lcdf' has already been declared to for signature (int, real) => real
  $ ../../../../../../install/default/bin/stanc redefine-prob-same.stan
Semantic error in 'redefine-prob-same.stan', line 2, column 2 to line 4, column 3:
   -------------------------------------------------
     1:  functions {
     2:    real poisson_lpmf(int n, real x) {
           ^
     3:      return -x^2;
     4:    }
   -------------------------------------------------

Function 'poisson_lpmf' has already been declared to for signature (int, real) => real
  $ ../../../../../../install/default/bin/stanc redefinition.stan
Semantic error in 'redefinition.stan', line 6, column 3 to line 8, column 4:
   -------------------------------------------------
     4:     }
     5:  
     6:     int foo(real x){
            ^
     7:       return 2;
     8:     }
   -------------------------------------------------

Function 'foo' has already been declared to for signature (real) => int
  $ ../../../../../../install/default/bin/stanc returntype_issues.stan
Semantic error in 'returntype_issues.stan', line 6, column 3 to line 8, column 4:
   -------------------------------------------------
     4:     }
     5:  
     6:     int foo(int x){
            ^
     7:       return 1;
     8:     }
   -------------------------------------------------

Function 'foo' cannot be overloaded by return type only. Previously used return type real
